docs/tests/nameres/control_flow/valid/DoWhileShadow.src
// Valid

fn void main() {
    let int i = 0;
    do {
        let int i = 1;
    } while(true);
}