docs/tests/nameres/control_flow/invalid/DoWhileOutOfScope.src
// Invalid 

fn void main() {
    do {
        let int i = 3;
    } while(1);

    do {
        i = 3;
    } while(1);
}